2007-02-17  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_Report.py: remove unused progress bar functions

2007-02-16  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/data/mainX.css: enable formatted notes on narrative web
	* src/plugins/NarrativeWeb.py: enable formatted notes on narrative web
	* src/MarkupText.py: properly reset xml generator output: fix #924
	* src/ManagedWindow.py: enable accelerators in editor windows 
	* src/Editors/_EditPrimary.py: enable accelerators in editor windows
	* src/Editors/_EditSecondary.py: enable accelerators in editor windows
	* src/Editors/_EditReference.py: enable accelerators in editor windows
	* src/DisplayTabs/_NoteTab.py: enable accelerators in editor windows 
	* src/DisplayTabs/_ButtonTab.py: enable accelerators in editor windows
	* src/DisplayTabs/_GrampsTab.py: enable accelerators in editor windows

2007-02-16  Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* src/ProgressDialog.py: more work on progress dialog
	
2007-02-16  Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/GrampsDb/__init__.py: add prototype progress dialog
	* src/GrampsDb/_LongOpStatus.py: add prototype progress dialog
	* src/ProgressDialog.py: add prototype progress dialog

2007-02-16  Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDb/_LongOpStatus.py: more work on long operation framework
	* src/GrampsDb/_CursorIterator.py: more work on long operation framework

2007-02-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: refactoring
	* src/GrampsDbUtils/_GedcomUtils.py: refactoring

2007-02-14  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/PSDrawDoc.py: remove draw_wedge from BaseDoc
	* src/ReportBase/_ReportUtils.py: remove draw_wedge from BaseDoc
	* src/plugins/FanChart.py: remove draw_wedge from BaseDoc
	* src/BaseDoc.py: remove draw_wedge from BaseDoc

2007-02-14  Brian Matherly  <brian@gramps-project.org>